--- a/public/assets/admin/custom-style.css
+++ b/public/assets/admin/custom-style.css
@@ -1,8 +1,25 @@
-<style>
-.sidebar-dark-primary .nav-sidebar>.nav-item>.nav-link.active,
-.sidebar-light-primary .nav-sidebar>.nav-item>.nav-link.active {
-    background-color: #007bff;
-    color: #fff;
-}
+<style type="text/css">
 
-<style>
+	.main-section{
+
+		margin:0 auto;
+
+		padding: 20px;
+
+		margin-top: 100px;
+
+		background-color: #fff;
+
+		box-shadow: 0px 0px 20px #c1c1c1;
+
+	}
+
+	.fileinput-remove,
+
+	.fileinput-upload{
+
+		display: none;
+
+	}
+
+</style>
